Revert "Fixing flickering"
This reverts commit 536451eb2846bc9d4e962de9a2ddf1327350aa85.

--- a/RainDrops/style.css
+++ b/RainDrops/style.css
@@ -6,7 +6,6 @@
 
 #overlay2{
     z-index:5;
-	-webkit-backface-visibility: hidden;
 }
 
 #main1Style  img{
@@ -78,6 +77,7 @@
 	right:0;
 	position:absolute;
 	background:purple;
+	z-index:1;
 }
 
 #Right-container {
